feat: add header in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,114 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <script src="js/main.min.js"></script>
+    <header class="header">
+        <div class="container">
+            <div class="menu">
+                <div class="logo menu__logo">Repair Design Project</div>
+                <nav class="nav menu__nav">
+                    <a href="#" class="nav__link">Главная</a>
+                    <a href="#" class="nav__link">ПРоекты</a>
+                    <a href="#" class="nav__link">Замер</a>
+                    <a href="#" class="nav__link">Команда</a>
+                    <a href="#" class="nav__link">Отзывы</a>
+                    <a href="#" class="nav__link">Контакты</a>
+                </nav>
+                <div class="contacts menu__contacts">
+                    <a href="tel:+79997683299" class="phone menu__phone">+7 (999) 768-32-99</a>
+                    <button class="button contacts__button button_primary">Заказать звонок</button>
+                </div>
+            </div>
+            <!-- /.menu -->
+            <div class="header__promo">
+
+            </div>
+            <!-- /.header__promo -->
+        </div>
+        <!-- /.container -->
+    </header>
+    <!-- /.header -->
+    <main class="main">
+        <section class="projects">
+            <div class="container">
+
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.projects -->
+        <section class="control">
+            <div class="container">
+
+            </div>
+        </section>
+        <!-- /.control -->
+        <section class="repair-types">
+            <div class="container">
+
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.repair-types -->
+        <section class="leave-contact">
+            <div class="container">
+
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.leave-contact -->
+        <section class="repair-styles">
+            <div class="container">
+
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.repair-styles -->
+        <section class="design-project">
+            <div class="container">
+                
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.design-project -->
+        <section class="working-methods">
+            <div class="container">
+
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.working-methods -->
+        <section class="command">
+            <div class="container">
+
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.command -->
+        <section class="clients">
+            <div class="container">
+
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.clients -->
+        <section class="contacts">
+            <div class="container">
+
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.contacts -->
+    </main>
+    <!-- /.main -->
+    <footer class="footer">
+        <div class="container">
+            <nav class="menu">
+
+            </nav>
+            <!-- /.menu -->
+        </div>
+        <!-- /.container -->
+    </footer>
+    <!-- /.footer -->
+    <script src="js/main.min.jss"></script>
 </body>
 </html>
