--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
                     <a href="#" class="nav__link">Контакты</a>
                 </nav>
                 <div class="contacts menu__contacts">
-                    <a href="tel:+79997683299" class="phone menu__phone">+7 (999) 768-32-99</a>
+                    <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
                     <button class="button contacts__button button_primary">Заказать звонок</button>
                 </div>
             </div>
