feat: header fixed and hero changed width

--- a/src/index.html
+++ b/src/index.html
@@ -32,23 +32,19 @@
     <!-- /.header -->
     <main class="main">
         <section class="hero">
+            <div class="instagram hero__instagram"><a href="#" class="instagram__link">INSTAGRAM</a></div>
             <div class="container">
-                <div class="hero__wrapper">
-                    <div class="hero__content">
-                        <div class="instagram hero__instagram"><a href="#" class="instagram__link">INSTAGRAM</a></div>
-                        <h1 class="title hero__title">
-                            <span class="title__text">турецкий ремонт в</span>
-                            <span class="title__text_primary">Ростове-на-дону</span>
-                        </h1>
-                        <p class="hero__text">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы</p>
-                        <div class="buttons hero__buttons">
-                            <button class="button hero__button button_primary">Рассчитать стоимость</button>
-                            <button class="button hero__button button_transparent">Отправить заявку</button>
-                        </div>
-                        <a href="#" class="scroll-down hero__scroll-down">листайте вниз</a>
+                <div class="hero__content">
+                    <h1 class="title hero__title">
+                        <span class="title__text">турецкий ремонт в&nbsp</span><span class="title__text_primary">Ростове-на-дону</span>
+                    </h1>
+                    <p class="hero__text">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы</p>
+                    <div class="buttons hero__buttons">
+                        <button class="button hero__button button_primary">Рассчитать стоимость</button>
+                        <button class="button hero__button button_transparent">Отправить заявку</button>
                     </div>
                 </div>
-                <!-- /.hero__wrapper -->
+                <a href="#" class="scroll-down hero__scroll-down">листайте вниз</a>
             </div>
             <!-- /.container -->
         </section>
