feat: add section title html and scss

--- a/src/index.html
+++ b/src/index.html
@@ -51,24 +51,36 @@
         <!-- /.hero -->
         <section class="projects">
             <div class="container">
-
+                
             </div>
             <!-- /.container -->
         </section>
         <!-- /.projects -->
-        <section class="control">
+        <section class="section control">
             <div class="container">
-
+                <div class="section-title">
+                    <h2 class="section-title__heading">онлайн контроль</h2>
+                    <div class="section-title__image">
+                        <img src="./img/control.svg" alt="control">
+                    </div>
+                </div>
+                <!-- /.section-title -->
             </div>
         </section>
-        <!-- /.control -->
-        <section class="repair-types">
+        <!-- /.section.control -->
+        <section class="section repair-types">
             <div class="container">
-
+                <div class="section-title">
+                    <h2 class="section-title__heading">Виды ремонта</h2>
+                    <div class="section-title__image">
+                        <img src="./img/repair.svg" alt="repair">
+                    </div>
+                </div>
+                <!-- /.section-title -->
             </div>
             <!-- /.container -->
         </section>
-        <!-- /.repair-types -->
+        <!-- /.section.repair-types -->
         <section class="leave-contact">
             <div class="container">
 
@@ -83,13 +95,19 @@
             <!-- /.container -->
         </section>
         <!-- /.repair-styles -->
-        <section class="design-project">
+        <section class="section design-project">
             <div class="container">
-                
+                <div class="section-title">
+                    <h2 class="section-title__heading">Дизайн проект</h2>
+                    <div class="section-title__image">
+                        <img src="./img/design.svg" alt="design">
+                    </div>
+                </div>
+                <!-- /.section-title -->
             </div>
             <!-- /.container -->
         </section>
-        <!-- /.design-project -->
+        <!-- /.section.design-project -->
         <section class="working-methods">
             <div class="container">
 
@@ -97,18 +115,30 @@
             <!-- /.container -->
         </section>
         <!-- /.working-methods -->
-        <section class="command">
+        <section class="section command">
             <div class="container">
-
+                <div class="section-title">
+                    <h2 class="section-title__heading">Наша команда</h2>
+                    <div class="section-title__image">
+                        <img src="./img/command.svg" alt="command">
+                    </div>
+                </div>
+                <!-- /.section-title -->
             </div>
-            <!-- /.container -->
+            <!-- /.section.container -->
         </section>
         <!-- /.command -->
-        <section class="clients">
+        <section class="section clients">
             <div class="container">
-
+                <div class="section-title">
+                    <h2 class="section-title__heading">Наши клиенты</h2>
+                    <div class="section-title__image">
+                        <img src="./img/clients.svg" alt="clients">
+                    </div>
+                </div>
+                <!-- /.section-title -->
             </div>
-            <!-- /.container -->
+            <!-- /.section.container -->
         </section>
         <!-- /.clients -->
         <section class="contacts">
