--- a/src/index.html
+++ b/src/index.html
@@ -70,13 +70,78 @@
         <!-- /.section.control -->
         <section class="section repair-types">
             <div class="container">
-                <div class="section-title">
+                <div class="section-title repair-types__title">
                     <h2 class="section-title__heading">Виды ремонта</h2>
                     <div class="section-title__image">
                         <img src="./img/repair.svg" alt="repair">
                     </div>
                 </div>
                 <!-- /.section-title -->
+                <div class="row">
+                    <div class="col">
+                        <div class="card repair-types__card">
+                            <div class="card__image">
+                                <img src="./img/repair-1.jpg" alt="repair">
+                            </div>
+                            <div class="card__text">
+                                <h3 class="card__title">Косметический ремонт</h3>
+                                <ul class="card__list">
+                                    <li class="card__item">Демонтаж старых покрытий</li>
+                                    <li class="card__item">Поклейка обоев</li>
+                                    <li class="card__item">Роспись стен и потолков</li>
+                                    <li class="card__item">Укладка полов</li>
+                                    <li class="card__item">Замена сантехники</li>
+                                    <li class="card__item">Замена розеток и выключателей</li>
+                                    <li class="card__item">Замена дверей</li>
+                                </ul>
+                                <div class="card__price">от 900 руб / m<sup>2</sup></div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.col -->
+                    <div class="col">
+                        <div class="card repair-types__card">
+                            <div class="card__image">
+                                <img src="./img/repair-2.jpg" alt="repair">
+                            </div>
+                            <div class="card__text">
+                                <h3 class="card__title">Капитальный ремонт</h3>
+                                <ul class="card__list">
+                                    <li class="card__item">Демонтаж старых покрытий</li>
+                                    <li class="card__item">Поклейка обоев</li>
+                                    <li class="card__item">Роспись стен и потолков</li>
+                                    <li class="card__item">Укладка полов</li>
+                                    <li class="card__item">Замена сантехники</li>
+                                    <li class="card__item">Замена розеток и выключателей</li>
+                                    <li class="card__item">Замена дверей</li>
+                                </ul>
+                                <div class="card__price">от 1800 руб / m<sup>2</sup></div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.col -->
+                    <div class="col">
+                        <div class="card repair-types__card">
+                            <div class="card__image">
+                                <img src="./img/repair-3.jpg" alt="repair">
+                            </div>
+                            <div class="card__text">
+                                <h3 class="card__title">Дизайнерский ремонт</h3>
+                                <ul class="card__list">
+                                    <li class="card__item">Демонтаж старых покрытий</li>
+                                    <li class="card__item">Поклейка обоев</li>
+                                    <li class="card__item">Роспись стен и потолков</li>
+                                    <li class="card__item">Укладка полов</li>
+                                    <li class="card__item">Замена сантехники</li>
+                                    <li class="card__item">Замена розеток и выключателей</li>
+                                    <li class="card__item">Замена дверей</li>
+                                </ul>
+                                <div class="card__price">от 4000 руб / m<sup>2</sup></div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.col -->
+                </div>
             </div>
             <!-- /.container -->
         </section>
