feat: add footer

--- a/src/index.html
+++ b/src/index.html
@@ -217,9 +217,21 @@
     <!-- /.main -->
     <footer class="footer">
         <div class="container">
-            <nav class="menu">
-
-            </nav>
+            <div class="menu">
+                <div class="logo menu__logo">Repair Design Project</div>
+                <nav class="nav menu__nav">
+                    <a href="#" class="nav__link">Главная</a>
+                    <a href="#" class="nav__link">ПРоекты</a>
+                    <a href="#" class="nav__link">Замер</a>
+                    <a href="#" class="nav__link">Команда</a>
+                    <a href="#" class="nav__link">Отзывы</a>
+                    <a href="#" class="nav__link">Контакты</a>
+                </nav>
+                <div class="contacts menu__contacts">
+                    <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
+                    <button class="button contacts__button button_primary">Заказать звонок</button>
+                </div>
+            </div>
             <!-- /.menu -->
         </div>
         <!-- /.container -->
