--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
                                     <li class="card__item">Замена розеток и выключателей</li>
                                     <li class="card__item">Замена дверей</li>
                                 </ul>
-                                <div class="card__price">от 900 руб / m<sup>2</sup></div>
+                                <div class="card__price-tag">от 900 руб / m<sup>2</sup></div>
                             </div>
                         </div>
                     </div>
@@ -115,7 +115,7 @@
                                     <li class="card__item">Замена розеток и выключателей</li>
                                     <li class="card__item">Замена дверей</li>
                                 </ul>
-                                <div class="card__price">от 1800 руб / m<sup>2</sup></div>
+                                <div class="card__price-tag">от 1800 руб / m<sup>2</sup></div>
                             </div>
                         </div>
                     </div>
@@ -136,7 +136,7 @@
                                     <li class="card__item">Замена розеток и выключателей</li>
                                     <li class="card__item">Замена дверей</li>
                                 </ul>
-                                <div class="card__price">от 4000 руб / m<sup>2</sup></div>
+                                <div class="card__price-tag">от 4000 руб / m<sup>2</sup></div>
                             </div>
                         </div>
                     </div>
@@ -162,13 +162,78 @@
         <!-- /.repair-styles -->
         <section class="section design-project">
             <div class="container">
-                <div class="section-title">
-                    <h2 class="section-title__heading">Дизайн проект</h2>
+                <div class="section-title design-project__title">
+                    <h2 class="section-title__heading design-project__heading">Дизайн проект</h2>
                     <div class="section-title__image">
                         <img src="./img/design.svg" alt="design">
                     </div>
                 </div>
                 <!-- /.section-title -->
+                <p class="section__description design-project__description">Дизайн-проект не только помогает сделать ремонт вашей квартиры более современным, но и значительно удешевляет материалы и сокращает время ремонтных работ</p>
+                <div class="row">
+                    <div class="col">
+                        <div class="card design-project__card">
+                            <div class="card__image">
+                                <img src="./img/design-1.jpg" alt="Минимальный">
+                            </div>
+                            <div class="card__text">
+                                <h3 class="card__title">Минимальный</h3>
+                                <ul class="card__list">
+                                    <li class="card__item">Измерительные чертежи</li>
+                                    <li class="card__item">Перепланировка</li>
+                                    <li class="card__item">Планировка мебели</li>
+                                    <li class="card__item">Сантехнический план</li>
+                                </ul>
+                                <div class="card__price-tag">150 руб / m<sup>2</sup></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card design-project__card">
+                            <div class="card__image">
+                                <img src="./img/design-2.jpg" alt="Стандартный">
+                            </div>
+                            <div class="card__text">
+                                <h3 class="card__title">Стандартный</h3>
+                                <ul class="card__list">
+                                    <li class="card__item">Измерительные чертежи</li>
+                                    <li class="card__item">Перепланировка</li>
+                                    <li class="card__item">Планировка мебели</li>
+                                    <li class="card__item">План потолков</li>
+                                    <li class="card__item">План этажей</li>
+                                    <li class="card__item">План электрики</li>
+                                    <li class="card__item">План света</li>
+                                </ul>
+                                <div class="card__price-tag">400 руб / m<sup>2</sup></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card design-project__card">
+                            <div class="card__image">
+                                <img src="./img/design-3.jpg" alt="Полный">
+                            </div>
+                            <div class="card__text">
+                                <h3 class="card__title">Полный</h3>
+                                <ul class="card__list">
+                                    <li class="card__item">Измерительные чертежи</li>
+                                    <li class="card__item">Перепланировка</li>
+                                    <li class="card__item">Планировка мебели</li>
+                                    <li class="card__item">План потолков</li>
+                                    <li class="card__item">План этажей</li>
+                                    <li class="card__item">План электрики</li>
+                                    <li class="card__item">План света</li>
+                                    <li class="card__item">Стенные развертки</li>
+                                    <li class="card__item">3D визуализация</li>
+                                    <li class="card__item">Смета на материалы</li>
+                                    <li class="card__item">Выезд на подбор материалов</li>
+                                    <li class="card__item">Выбор мебели</li>
+                                </ul>
+                                <div class="card__price-tag">900 руб / m<sup>2</sup></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <!-- /.container -->
         </section>
