feat: add dark picture on section design

--- a/src/index.html
+++ b/src/index.html
@@ -173,7 +173,7 @@
                 <div class="row">
                     <div class="col">
                         <div class="card design-project__card">
-                            <div class="card__image">
+                            <div class="card__image design-project__image">
                                 <img src="./img/design-1.jpg" alt="Минимальный">
                             </div>
                             <div class="card__text">
@@ -190,7 +190,7 @@
                     </div>
                     <div class="col">
                         <div class="card design-project__card">
-                            <div class="card__image">
+                            <div class="card__image design-project__image">
                                 <img src="./img/design-2.jpg" alt="Стандартный">
                             </div>
                             <div class="card__text">
@@ -210,7 +210,7 @@
                     </div>
                     <div class="col">
                         <div class="card design-project__card">
-                            <div class="card__image">
+                            <div class="card__image design-project__image">
                                 <img src="./img/design-3.jpg" alt="Полный">
                             </div>
                             <div class="card__text">
