feat: add modal

--- a/src/index.html
+++ b/src/index.html
@@ -309,23 +309,23 @@
                 Оставьте заявку и наш менеджер свяжется с вами 
             </p>
             <form class="modal__form">
-                <div class="modal__input-group">
-                    <label for="name" class="modal__label">Имя</label>
-                    <input id="name" type="text" class="modal__input" placeholder="Как вас зовут:">
+                <div class="input-group modal__input-group">
+                    <label for="name" class="input-group__label">Имя</label>
+                    <input id="name" type="text" class="input-group__input" placeholder="Как вас зовут:">
                 </div>
-                <div class="modal__input-group">
-                    <label for="phone" class="modal__label">Телефон</label>
-                    <input id="phone" type="text" class="modal__input" placeholder="Ваш номер телефона:">
+                <div class="input-group modal__input-group">
+                    <label for="phone" class="input-group__label">Телефон</label>
+                    <input id="phone" type="text" class="input-group__input" placeholder="Ваш номер телефона:">
                 </div>
-                <div class="modal__input-group">
-                    <label for="email" class="modal__label">Email</label>
-                    <input id="email" type="text" class="modal__input" placeholder="Ваш email">
+                <div class="input-group">
+                    <label for="email" class="input-group__label">Email</label>
+                    <input id="email" type="text" class="input-group__input" placeholder="Ваш email">
                 </div>
-                <div class="modal__checkbox">
-                    <input id="agree" type="checkbox" class="modal__input-checkbox">
-                    <label for="agree" class="modal__label-checkbox">Я соглашаюсь с обработкой данных</label>
+                <div class="checkbox-group modal__checkbox-group">
+                    <input id="agree" type="checkbox" class="checkbox-group__input">
+                    <label for="agree" class="checkbox-group__label">Я соглашаюсь с обработкой данных</label>
                 </div>
-                <button class="buttom modal__button button_primary">Отправить заявку</button>
+                <button class="button modal__button button_primary">Отправить заявку</button>
             </form>
             <!-- /.modal__form -->
         </div>
