refact: add jquery

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
                     </h1>
                     <p class="hero__text">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы</p>
                     <div class="buttons hero__buttons">
-                        <button class="button hero__button button_primary">Рассчитать стоимость</button>
+                        <button class="button hero__button button_primary" data-toggle="modal">Рассчитать стоимость</button>
                         <button class="button hero__button button_transparent">Отправить заявку</button>
                     </div>
                 </div>
