--- a/src/index.html
+++ b/src/index.html
@@ -44,12 +44,12 @@
                         <button class="button hero__button button_transparent">Отправить заявку</button>
                     </div>
                 </div>
-                <a href="#" class="scroll-down hero__scroll-down">листайте вниз</a>
+                <a href="#projects" class="scroll-down hero__scroll-down">листайте вниз</a>
             </div>
             <!-- /.container -->
         </section>
         <!-- /.hero -->
-        <section class="projects">
+        <section class="projects" id="projects">
             <div class="container">
                 
             </div>
@@ -294,7 +294,7 @@
                 </nav>
                 <div class="contacts menu__contacts">
                     <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
-                    <button class="button contacts__button button_primary">Заказать звонок</button>
+                    <button class="button contacts__button button_primary" data-toggle="modal">Заказать звонок</button>
                 </div>
             </div>
             <!-- /.menu -->
