feat: add projects slider

--- a/src/index.html
+++ b/src/index.html
@@ -49,9 +49,111 @@
             <!-- /.container -->
         </section>
         <!-- /.hero -->
-        <section class="projects" id="projects">
+        <section class="section projects section_dark" id="projects">
             <div class="container">
-                
+                <div class="row projects__content">
+                    <div class="col-50">
+                        <div class="section-title section-title_left projects__section-title">
+                            <h2 class="section-title__heading section-title__heading_primary">Завершенные<div class="section-title__word">проекты</div></h2>
+                            <p class="section-title__text">На сайте представлена ​​лишь небольшая часть работ, выполняемых нашей компанией. За 14 лет работы на строительном рынке мы осчастливили более 1000 семей</p>
+                        </div>
+                        <!-- /.section-title -->
+                        <div class="swiper projects__swiper">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide swiper-slide-row">
+                                    <div class="swiper-slide__text">
+                                        <h3 class="swiper-slide__heading">Город:</h3>
+                                        <span class="swiper-slide__value">Ростов-на-Дону<br>ЖК Адмирал</span>
+                                    </div>
+                                    <div class="swiper-slide__text">
+                                        <h3 class="swiper-slide__heading">Площадь:</h3>
+                                        <span class="swiper-slide__value">81 м2</span>
+                                    </div>
+                                    <div class="swiper-slide__text">
+                                        <h3 class="swiper-slide__heading">Срок ремонта:</h3>
+                                        <span class="swiper-slide__value">3,5 месяца</span>
+                                    </div>
+                                    <div class="swiper-slide__text">
+                                        <h3 class="swiper-slide__heading">Стоимость:</h3>
+                                        <span class="swiper-slide__value">По запросу</span>
+                                    </div>
+                                </div>
+                                <!-- /.swiper-slide-->
+                                <div class="swiper-slide swiper-slide-row">
+                                    <div class="swiper-slide__text">
+                                        <h3 class="swiper-slide__heading">Город:</h3>
+                                        <span class="swiper-slide__value">Ростов-на-Дону ЖК Адмирал</span>
+                                    </div>
+                                    <div class="swiper-slide__text">
+                                        <h3 class="swiper-slide__heading">Площадь:</h3>
+                                        <span class="swiper-slide__value">81 м2</span>
+                                    </div>
+                                    <div class="swiper-slide__text">
+                                        <h3 class="swiper-slide__heading">Срок ремонта:</h3>
+                                        <span class="swiper-slide__value">3,5 месяца</span>
+                                    </div>
+                                    <div class="swiper-slide__text">
+                                        <h3 class="swiper-slide__heading">Стоимость:</h3>
+                                        <span class="swiper-slide__value">По запросу</span>
+                                    </div>
+                                </div>
+                                <!-- /.swiper-slide-->
+                                <div class="swiper-slide swiper-slide-row">
+                                    <div class="swiper-slide__text">
+                                        <h3 class="swiper-slide__heading">Город:</h3>
+                                        <span class="swiper-slide__value">Ростов-на-Дону ЖК Адмирал</span>
+                                    </div>
+                                    <div class="swiper-slide__text">
+                                        <h3 class="swiper-slide__heading">Площадь:</h3>
+                                        <span class="swiper-slide__value">81 м2</span>
+                                    </div>
+                                    <div class="swiper-slide__text">
+                                        <h3 class="swiper-slide__heading">Срок ремонта:</h3>
+                                        <span class="swiper-slide__value">3,5 месяца</span>
+                                    </div>
+                                    <div class="swiper-slide__text">
+                                        <h3 class="swiper-slide__heading">Стоимость:</h3>
+                                        <span class="swiper-slide__value">По запросу</span>
+                                    </div>
+                                </div>
+                                <!-- /.swiper-slide-->
+                            </div>
+                            <!-- /.swiper-wrapper -->
+                            <div class="swiper__buttons">
+                                <div class="swiper-button-prev"></div>
+                                <!-- /.swiper-button-prev -->
+                                <div class="swiper-pagination"></div>
+                                <!-- /.swiper-pagination -->
+                                <div class="swiper-button-next"></div>
+                                <!-- /.swiper-button-next -->
+                            </div>
+                            <!-- /.swiper__buttons -->
+                        </div>
+                        <!-- /.projects__swiper -->
+                    </div>
+                    <!-- /.col-50 -->
+                    <div class="col-50">
+                        <div class="swiper projects__swiper">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <img src="./img/project-1.jpg" alt="project-1">
+                                </div>
+                                <!-- /.swiper-slide -->
+                                <div class="swiper-slide">
+                                    <img src="./img/project-1.jpg" alt="project-1">
+                                </div>
+                                <!-- /.swiper-slide -->
+                                <div class="swiper-slide">
+                                    <img src="./img/project-1.jpg" alt="project-1">
+                                </div>
+                                <!-- /.swiper-slide -->
+                            </div>
+                        </div>
+                        <!-- /.projects__swiper -->
+                    </div>
+                    <!-- /.col-50 -->
+                </div>
+                <!-- /.row-->
             </div>
             <!-- /.container -->
         </section>
@@ -78,7 +180,7 @@
                 </div>
                 <!-- /.section-title -->
                 <div class="row">
-                    <div class="col">
+                    <div class="col-30">
                         <div class="card repair-types__card">
                             <div class="card__image">
                                 <img src="./img/repair-1.jpg" alt="repair">
@@ -98,8 +200,8 @@
                             </div>
                         </div>
                     </div>
-                    <!-- /.col -->
-                    <div class="col">
+                    <!-- /.col-30 -->
+                    <div class="col-30">
                         <div class="card repair-types__card">
                             <div class="card__image">
                                 <img src="./img/repair-2.jpg" alt="repair">
@@ -119,8 +221,8 @@
                             </div>
                         </div>
                     </div>
-                    <!-- /.col -->
-                    <div class="col">
+                    <!-- /.col-30 -->
+                    <div class="col-30">
                         <div class="card repair-types__card">
                             <div class="card__image">
                                 <img src="./img/repair-3.jpg" alt="repair">
@@ -140,7 +242,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- /.col -->
+                    <!-- /.col-30 -->
                 </div>
             </div>
             <!-- /.container -->
@@ -171,7 +273,7 @@
                 <!-- /.section-title -->
                 <p class="section__description design-project__description">Дизайн-проект не только помогает сделать ремонт вашей квартиры более современным, но и значительно удешевляет материалы и сокращает время ремонтных работ</p>
                 <div class="row">
-                    <div class="col">
+                    <div class="col-30">
                         <div class="card design-project__card">
                             <div class="card__image design-project__image">
                                 <img src="./img/design-1.jpg" alt="Минимальный">
@@ -188,7 +290,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-30">
                         <div class="card design-project__card">
                             <div class="card__image design-project__image">
                                 <img src="./img/design-2.jpg" alt="Стандартный">
@@ -208,7 +310,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-30">
                         <div class="card design-project__card">
                             <div class="card__image design-project__image">
                                 <img src="./img/design-3.jpg" alt="Полный">
